prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/unfinished_string.nut
// EXPECT_ERROR: "unfinished string"
let x = "hello